--- a/index.html
+++ b/index.html
@@ -177,6 +177,12 @@
       <img src="canva.jpg" alt="School Project">
       <h3>School Project One</h3>
       <p>A web design project I created for school.</p>
+      <img src="figma.jpg" alt="School Project">
+      <h3>School Project One</h3>
+      <p>A web design project I created for school.</p>
+      <img src="figma.jpg" alt="School Project">
+      <h3>School Project One</h3>
+      <p>A web design project I created for school.</p>
     </div>
   </section>
 
