--- a/index.html
+++ b/index.html
@@ -175,14 +175,17 @@
 
     <div class="project school">
       <img src="canva.jpg" alt="School Project">
-      <h3>School Project One</h3>
+      <h3>CANVA PORTFOLIO</h3>
       <p>A web design project I created for school.</p>
-      <img src="figma.jpg" alt="School Project">
-      <h3>School Project One</h3>
+       <a href="https://www.figma.com/proto/ijpQ9dUGlvaWJGZ08fZwOD/BAYKING?t=flcu9bYLhD7msj4n-1"target="_blank"> <img src="figma.jpg" alt="School Project">
+      <h3>FIGMA PORTFOLIO</h3>
       <p>A web design project I created for school.</p>
-      <img src="figma.jpg" alt="School Project">
-      <h3>School Project One</h3>
+      <img src="canva.jpg" alt="School Project">
+      <h3>FIGMA E-COMMERCE</h3>
+       <a href=" <a href="https://www.figma.com/proto/WM61ARdBPJb16eJ2kCpgVH/Untitled?t=flcu9bYLhD7msj4n-1"target="_blank"> <img src="figma.jpg" alt="School Project"></a>
+    
       <p>A web design project I created for school.</p>
+    
     </div>
   </section>
 
